# remote-module-template

./: .travis.yml  CMakeLists.txt  README  README.md  ci.cmake  otb-module.cmake  setup_windows_env.sh
app/: CMakeLists.txt  otbEmptyApp.cxx
include/: otbSomeFile.h  otbSomeHeader.h  otbSomeHeader.hxx
src/: CMakeLists.txt  otbSomeFile.cxx
test/: CMakeLists.txt  EmptyScript.py  otbEmptyTest.cxx  otbEmptyTestDriver.cxx
